welcome.lessons.welcome.array.array123.Array123.scala.code
def array123(nums:Array[Int]): Boolean = {
	
		if( nums(1)=1){
			return true
		}else{
			return false
		}
	}

